Update view and database info

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,10 +1,11 @@
-%h1= "Messages"
+%h1= "Messages App"
 
-- @messages.each do |message|
-  %p= message.body
+%br
+  %h2= "Messages (Newest first)"
+  - @messages.each_with_index do |message, index|
+    %p= "#{index + 1}. #{message.body}"
 
-
-%h2= "Hashtags"
-
-- @hashtags.each do |tag, count|
-  %p= "#{tag} (#{count})"
+%br
+  %h2= "Hashtags (Most frequently used)"
+  - @hashtags.each do |tag, count|
+    %p= "#{tag} (#{count})"
